# elegoo-robot-car4

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/: compute_ultrasonic_calibration.py  ultrasonic-data.csv
elegoo-patches/: esp32-with-conn-to-router.patch  esp32.patch  tb6612_mpu6050.patch
src/elegoo_robot_car4/: __init__.py  car.py  elegoo_smartcar_control.py  person_follower.py
tests/: __init__.py  conftest.py
tests/integration_tests/: conftest.py  test_car.py
tests/resources/: __init__.py  capture-response.pkl
tests/unit_tests/: conftest.py  test_car.py  test_person_follower.py
