[project]
name = "elegoo-robot-car4"
version = "0.1.0"
description = "Python software for controlling the Elegoo Smart Robot Car V4.0"
readme = "README.md"
authors = [
    { name = "Michele De Stefano", email = "---" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.90",
    "pygame-ce>=2.5.6",
    "requests>=2.32.5",
    "scipy>=1.17.0",
]

[project.scripts]
elegoo-smartcar-control = "elegoo_robot_car4.elegoo_smartcar_control:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
