[project]
name = "elegoo-robot-car4"
version = "0.2.0"
description = "Python software for controlling the Elegoo Smart Robot Car V4.0"
readme = "README.md"
authors = [
    { name = "Michele De Stefano" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "opencv-python>=4.13.0.90",
    "pygame-ce>=2.5.6",
    "requests>=2.32.5",
    "scipy>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/micdestefano/elegoo-robot-car4"
Documentation = "https://github.com/micdestefano/elegoo-robot-car4/blob/main/README.md"
Download = "https://pypi.org/project/elegoo-robot-car4/#files"
Source = "https://github.com/micdestefano/elegoo-robot-car4"
Issues = "https://github.com/micdestefano/elegoo-robot-car4/issues"


[project.scripts]
elegoo-smartcar-control = "elegoo_robot_car4.elegoo_smartcar_control:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.coverage.run]
omit = [
    # This file contains the game engine and an automatic test
    # is useless. It must be tested manually.
    "elegoo_smartcar_control.py",
]
